// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: cannot export 1`] = `
<div
  className="boxed-group"
  id="project-export"
>
  <div
    className="boxed-group-header"
  >
    <h2>
      project_dump.export
    </h2>
  </div>
  <div
    className="boxed-group-inner"
  >
    <Alert
      id="export-not-possible"
      variant="warning"
    >
      project_dump.can_not_export
    </Alert>
  </div>
</div>
`;

exports[`should render correctly: no task 1`] = `
<div
  className="boxed-group"
  id="project-export"
>
  <div
    className="boxed-group-header"
  >
    <h2>
      project_dump.export
    </h2>
  </div>
  <div
    className="boxed-group-inner"
  >
    <div>
      <div
        className="spacer-bottom"
      >
        project_dump.export_form_description
      </div>
      <Button
        onClick={[Function]}
      >
        project_dump.do_export
      </Button>
    </div>
  </div>
</div>
`;

exports[`should render correctly: success 1`] = `
<div
  className="boxed-group"
  id="project-export"
>
  <div
    className="boxed-group-header"
  >
    <h2>
      project_dump.export
    </h2>
  </div>
  <div
    className="boxed-group-inner"
  >
    <Alert
      className="export-dump"
      variant="success"
    >
      <DateTimeFormatter
        date="2020-03-12T12:22:20Z"
      >
        <Component />
      </DateTimeFormatter>
      <div
        className="export-dump-path"
      >
        <code
          tabIndex={0}
        >
          dump-file
        </code>
      </div>
    </Alert>
    <div>
      <div
        className="spacer-bottom"
      >
        project_dump.export_form_description
      </div>
      <Button
        onClick={[Function]}
      >
        project_dump.do_export
      </Button>
    </div>
  </div>
</div>
`;

exports[`should render correctly: task failed 1`] = `
<div
  className="boxed-group"
  id="project-export"
>
  <div
    className="boxed-group-header"
  >
    <h2>
      project_dump.export
    </h2>
  </div>
  <div
    className="boxed-group-inner"
  >
    <Alert
      id="export-in-progress"
      variant="error"
    >
      project_dump.failed_export
      <ForwardRef(Link)
        className="spacer-left"
        to="/project/background_tasks?id=key&status=FAILED&taskType=PROJECT_EXPORT"
      >
        project_dump.see_details
      </ForwardRef(Link)>
    </Alert>
    <div>
      <div
        className="spacer-bottom"
      >
        project_dump.export_form_description
      </div>
      <Button
        onClick={[Function]}
      >
        project_dump.do_export
      </Button>
    </div>
  </div>
</div>
`;

exports[`should render correctly: task in progress 1`] = `
<div
  className="boxed-group"
  id="project-export"
>
  <div
    className="boxed-group-header"
  >
    <h2>
      project_dump.export
    </h2>
  </div>
  <div
    className="boxed-group-inner"
    id="export-in-progress"
  >
    <i
      className="spinner spacer-right"
    />
    <DateFromNow
      date="2020-03-12T12:20:20Z"
    >
      <Component />
    </DateFromNow>
  </div>
</div>
`;

exports[`should render correctly: task pending 1`] = `
<div
  className="boxed-group"
  id="project-export"
>
  <div
    className="boxed-group-header"
  >
    <h2>
      project_dump.export
    </h2>
  </div>
  <div
    className="boxed-group-inner"
    id="export-pending"
  >
    <i
      className="spinner spacer-right"
    />
    <DateTimeFormatter
      date="2020-03-12T12:15:20Z"
    >
      <Component />
    </DateTimeFormatter>
  </div>
</div>
`;
